--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-before-after-slider-component",
-  "version": "0.6.2",
+  "version": "0.7.0",
   "description": "",
-  "main": "src/build.js",
+  "main": "dist/build.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=production --env production --progress && tsc"
@@ -11,14 +11,16 @@
   "author": "smelesh23@gmail.com",
   "license": "MIT",
   "devDependencies": {
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.7",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "@types/webpack": "^5.28.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
+    "ignore-loader": "^0.1.2",
+    "mini-css-extract-plugin": "^1.6.0",
     "node-sass": "^6.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^9.2.3",
