--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "react-before-after-slider-component",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "",
   "main": "dist/build.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:npm": "webpack --config webpack/npm.config.js --mode=production --env production --progress",
-    "build:githubPages": "webpack --config webpack/githubPages.config.js --mode=production --env production --progress"
+    "build:githubPages": "webpack --config webpack/githubPages.config.js --mode=production --env production --progress",
+    "build:githubPages:serve": "webpack serve --config webpack/githubPages.config.js --mode=development"
   },
   "types": "dist/index.d.ts",
   "author": "smelesh23@gmail.com",
@@ -30,7 +31,8 @@
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.2",
     "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^4.7.4"
   },
   "peerDependencies": {
     "react": "^17.0.2",
